# snappy_framed-rs

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md  index.html  search-index.js  test_compress.js  test_uncompress.js
crc/: index.html  stability.html  stability.json
crc/crc32/: constant.CASTAGNOLI.html  constant.IEEE.html  constant.KOOPMAN.html  fn.checksum_castagnoli.html  fn.checksum_ieee.html  fn.checksum_koopman.html  fn.make_table.html  fn.update.html  index.html  sidebar-items.js  struct.Digest.html  trait.Hasher32.html
crc/crc64/: constant.ECMA.html  constant.ISO.html  fn.checksum_ecma.html  fn.checksum_iso.html  fn.make_table.html  fn.update.html  index.html  sidebar-items.js  struct.Digest.html  trait.Hasher64.html
data/: arbres.txt  arbres.txt.sz
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
snappy/: fn.compress.html  fn.uncompress.html  fn.validate_compressed_buffer.html  index.html  sidebar-items.js  stability.html  stability.json
snappy_framed/: index.html  sidebar-items.js  stability.html  stability.json
snappy_framed/read/: enum.CrcMode.html  index.html  sidebar-items.js  struct.SnappyFramedDecoder.html
snappy_framed/write/: index.html  sidebar-items.js  struct.SnappyFramedEncoder.html
src/: buffer.rs  consts.rs  lib.rs  masked_crc.rs  read.rs  test_helpers.rs  write.rs
src/crc/: crc32.rs.html  crc64.rs.html  lib.rs.html
src/snappy/: lib.rs.html
src/snappy_framed/: lib.rs.html  read.rs.html  write.rs.html
(+2 files in other folders)
