[package]
name = "snappy_framed"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Read and Write implementations for streaming, framed Snappy compression format."

homepage = "https://github.com/emk/snappy_framed-rs"
repository = "https://github.com/emk/snappy_framed-rs"
documentation = "http://emk.github.io/snappy_framed-rs/snappy_framed/index.html"
readme = "README.md"
keywords = ["compression"]
license = "MIT"

[features]
# Allow access to unstable features when being built with a nightly compiler,
# to keep travis-cargo happy and enable access to benchmarks.
unstable = []

[dependencies]
crc = "*"
log = "*"
snappy = "*"

[dev-dependencies]
dribble = "*"
